# game-of-life

./: .clang-format  .gitignore  CMakeLists.txt  README.md  justfile
async/: CMakeLists.txt
async/src/: main.c  manager.c  worker.c
async/src/include/: manager.h  worker.h
blockage/: CMakeLists.txt
blockage/src/: main.c  worker.c
common/: CMakeLists.txt
common/include/game_of_life/: board.h  board_utils.h  hello.h  manager.h  pgm.h  utils.h  worker.h
common/src/: board.c  board_utils.c  hello.c  manager.c  pgm.c  utils.c
scripts/: async.sh  async_omp.sh  blockage.sh  blockage_omp.sh  wirus.sh  wirus_async.sh  wirus_blockage.sh
serial/: CMakeLists.txt
serial/src/: main.c
